--- a/sass/style.scss
+++ b/sass/style.scss
@@ -75,3 +75,4 @@
 @import "partials/patterns/split";
 @import "partials/patterns/inline-list";
 @import "partials/patterns/pagination";
+@import "partials/patterns/stat-list";
