Use flexbox on login

--- a/app/templates/login.twig
+++ b/app/templates/login.twig
@@ -42,13 +42,13 @@
 {% endblock %}
 
 {% block dual_page %}
-    <div class="dash-box-wrapper" style="background: transparent">
+    <div class="flex-box-wrapper">
 
-        <div class="dash-box">
+        <div class="flex-box">
             {{ block('login_form') }}
         </div>
 
-        <div class="dash-box">
+        <div class="flex-box">
             <h3 class="mbn">Today</h3>
             <ul class="stat-list">
                 <li>
