--- a/sass/partials/_dash-box.scss
+++ b/sass/partials/_dash-box.scss
@@ -1,23 +1,24 @@
-.dash-box-wrapper{
+.dash-box-wrapper, .flex-box-wrapper {
     background-color: tint($light-grey, 50%);
     @include margin-x(-0.8em);
     margin-bottom: -1em;
     overflow: hidden;
 
-    @include breakpoint(33em){
+    @include breakpoint(33em) {
        @include margin-x(-1.09em);
     }
 }
 
-
-.dash-box{
+.dash-box, .flex-box {
     @include border-radius(5px);
     @include leader();
     @include padding-x(msem(5));
     padding-top: msem(1);
     background-color: #fff;
+}
 
-    @include breakpoint(40em){
+.dash-box {
+    @include breakpoint(40em) {
         &:nth-child(odd){
             @include grid-span(1,1, $grid: 2, $gutter: .08);
             clear: left;
@@ -30,3 +31,29 @@
     }
 
 }
+
+.flex-box-wrapper {
+    display: block;
+
+    @include breakpoint(40em) {
+       display: flex;
+    }
+}
+
+.flex-box {
+    flex: 1;
+    @include margin-x(0);
+    padding-bottom: msem(1);
+
+    @include breakpoint(40em) {
+        &:nth-child(odd) {
+            margin-right: 1em;
+        }
+
+        &:nth-child(even) {
+            margin-left: 1em;
+        }
+
+    }
+}
+
