Update tablesaw to 1.0.4

--- a/app/templates/admin/cache.management.twig
+++ b/app/templates/admin/cache.management.twig
@@ -29,7 +29,7 @@
     <h3>Permissions Cache</h3>
     <section class="trailer">
 
-        <table class="tablesaw tablesaw-stack" data-mode="stack">
+        <table>
             <thead>
                 <th>Key</th>
                 <th>TTL</th>
