--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -12,7 +12,7 @@
 
     {% if repos %}
 
-        <table class="tablesaw tablesaw-stack" data-mode="stack">
+        <table data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Repo Status</th>
