--- a/app/templates/partials/log-table.twig
+++ b/app/templates/partials/log-table.twig
@@ -1,5 +1,4 @@
-<!-- <table class="tablesaw tablesaw-stack" data-mode="stack" style="width: 100%;"> -->
-<table>
+<table data-tablesaw-mode="stack">
     <thead>
         <th class="t20">Event</th>
         <th>Time</th>
