--- a/app/templates/partials/pending-table.twig
+++ b/app/templates/partials/pending-table.twig
@@ -1,4 +1,4 @@
-<table id="js-queue" class="tablesaw tablesaw-stack" data-mode="stack">
+<table id="js-queue" data-tablesaw-mode="stack">
     <thead>
         <th>Type</th>
         <th>Repository</th>
