--- a/app/templates/repository/deployments.twig
+++ b/app/templates/repository/deployments.twig
@@ -19,7 +19,7 @@
 
             <h3>{{ environment.key }}</h3>
 
-            <table class="tablesaw tablesaw-stack" data-mode="stack">
+            <table data-tablesaw-mode="stack">
                 <thead>
                 <tr>
                     <th class="t15">Hostname</th>
