--- a/app/templates/repository/encrypted/encrypted.properties.twig
+++ b/app/templates/repository/encrypted/encrypted.properties.twig
@@ -10,7 +10,7 @@
     <p><a class="btn--small btn--back" href="{{ urlFor('repository', {'id': repository.id}) }}">Back to Repository</a></p>
 
     {% if encrypted %}
-        <table class="tablesaw tablesaw-stack" data-mode="stack">
+        <table data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Property Name</th>
