--- a/app/templates/repository/repositories.twig
+++ b/app/templates/repository/repositories.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h2>Repositories</h2>
 
-    <table class="tablesaw tablesaw-stack" data-mode="stack">
+    <table data-tablesaw-mode="stack">
         <thead>
             <tr>
                 <th>Repository</th>
