--- a/app/templates/server/server.twig
+++ b/app/templates/server/server.twig
@@ -18,7 +18,7 @@
 
     <h3>Repository deployments</h3>
     {% if deployments_with_optional_eb %}
-        <table class="tablesaw tablesaw-stack" data-mode="stack">
+        <table data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Repository</th>
