--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -64,7 +64,7 @@
     {% if permissions %}
         <p><strong>{{ displayName }}</strong> can push the following repositories to the specified environments.</p>
 
-        <table class="tablesaw tablesaw-stack" data-mode="stack">
+        <table data-tablesaw-mode="stack">
             <thead>
             <tr>
                 <th>Environment</th>
