--- a/app/templates/user/users.twig
+++ b/app/templates/user/users.twig
@@ -16,7 +16,7 @@
 
 
 {% macro userTable(users) %}
-    <table class="tablesaw tablesaw-stack" data-mode="stack">
+    <table data-tablesaw-mode="stack">
         <thead>
         <tr>
             <th>User ID</th>
