--- a/app/templates/admin/users.management.twig
+++ b/app/templates/admin/users.management.twig
@@ -22,7 +22,7 @@
         </p>
     {% endif %}
 
-    <table class="tablesaw tablesaw-stack" data-mode="stack">
+    <table data-tablesaw-mode="stack">
         <thead>
         <tr>
             <th>User ID</th>
