--- a/app/templates/audit.logs.twig
+++ b/app/templates/audit.logs.twig
@@ -9,7 +9,7 @@
 
     <p>Changes to database entities will be logged on this page.</p>
 
-    <table class="tablesaw tablesaw-stack" data-mode="stack">
+    <table data-tablesaw-mode="stack">
         <thead>
             <th>Date</th>
             <th>User</th>
