--- a/app/templates/partials/push-table.twig
+++ b/app/templates/partials/push-table.twig
@@ -1,4 +1,4 @@
-<table class="tablesaw tablesaw-stack" data-mode="stack">
+<table data-tablesaw-mode="stack">
     <thead>
         <th>Push</th>
         <th>Status</th>
