--- a/app/templates/repository/repository.twig
+++ b/app/templates/repository/repository.twig
@@ -100,7 +100,7 @@
 
     {% if permissions %}
         <p>The following users have permission to push <strong>{{ repository.name }}</strong> to the specified environment.</p>
-        <table class="tablesaw tablesaw-stack" data-mode="stack">
+        <table data-tablesaw-mode="stack">
             <thead>
             <tr>
                 <th>Environment</th>
@@ -128,7 +128,7 @@
 
     <h3>Server Deployments</h3>
     {% if deployment_count %}
-        <table class="tablesaw tablesaw-stack" data-mode="stack">
+        <table data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Environment</th>
