Move audit logs to admin, add stubbed queue history page

--- a/app/templates/admin/audit.logs.twig
+++ b/app/templates/admin/audit.logs.twig
@@ -41,6 +41,6 @@
         </tbody>
     </table>
 
-    {{ pagination.pagination(page, last, 'logs.page', {}) }}
+    {{ pagination.pagination(page, last, 'admin.audit.logs', {}) }}
 
 {% endblock %}
