--- a/app/templates/admin/dashboard.twig
+++ b/app/templates/admin/dashboard.twig
@@ -25,6 +25,11 @@
                         <svg class="icon"><use xlink:href="#tick"></use></svg> Environments
                     </a>
                 </li>
+                <li>
+                    <a href="{{ urlFor('admin.queue.page1') }}" class="btn">
+                        <svg class="icon"><use xlink:href="#tick"></use></svg> Queue History
+                    </a>
+                </li>
             </ul>
         </section>
 
@@ -38,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{{ urlFor('logs') }}" class="btn btn--primary">
+                    <a href="{{ urlFor('admin.audit.logs.page1') }}" class="btn btn--primary">
                         <svg class="icon"><use xlink:href="#tick"></use></svg> Audit Logs
                     </a>
                 </li>
