--- a/templates/admin/audit.logs.twig
+++ b/templates/admin/audit.logs.twig
@@ -19,7 +19,7 @@
         <tbody>
         {% for log in logs %}
             <tr>
-                <td>{{ log.recorded|timepoint('M j, Y g:i A') }}</td>
+                <td>{{ log.recorded|html5date }}</td>
                 <td><a href="{{ urlFor('user', {'id': log.user.id}) }}">{{ log.user.handle }}</a></td>
                 <td><b>{{ log.action }}</b></td>
                 <td>{{ log.entity|replace({':': ' : '}) }}</td>
