--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -102,12 +102,12 @@
 
             <dt class="split--left__title">Start</dt>
             <dd class="split--left__value js-push-start">
-                {{ push.start|reldate }}
+                {{ push.start|html5date }}
             </dd>
 
             <dt class="split--left__title">End</dt>
             <dd class="split--left__value js-push-end">
-                {{ push.end|timepoint('M j, Y g:i A') }}
+                {{ push.end|html5date }}
             </dd>
 
             <dt class="split--left__title">Initiator</dt>
